test/Harper/Tests/Good/HelloWorld.har
main :: sideeffect -> ();
main = {
  eval print "Hello,\nworld!" ();
};