test/Harper/Tests/Bad/VariantDataMethodTypeHintWithoutDefinition.har
value HelloWorld = {
    variant Hi = {
      sayHello :: String;
      sayHello = "Hi, World!";
    };

    variant Hello = {
      data = {
        name :: String;
      }
      sayHello :: String;
    };
  };